--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QF0MVNH8G2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QF0MVNH8G2');
+</script>
     <meta charset="utf-8" />
     <link rel="icon" href="./vilasC1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -39,7 +48,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <center> <p> &copy; <script>document.write(new Date().getFullYear())</script> Vilas Hegde All Rights are not Reserved<img style="width: 5%;position:absolute;margin:0 3px;display: inline-block;right: 3%;" src="./vilasC1.webp"></p></center>
+    <center> <p> &copy; <script>document.write(new Date().getFullYear())</script> Vilas Hegde All Rights are not Reserved</p></center>
 
   </body>
 </html>
