--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,16 @@
 
   gtag('config', 'G-QF0MVNH8G2');
 </script>
+<meta name="google-site-verification" content="x6-z87gjUSYpyB5BfqAAwG-zRHHGDKAcCJwbdm5moHY" />
     <meta charset="utf-8" />
-    <link rel="icon" href="./vilasC1.webp" />
+    <link rel="icon" href="../public/favicon.ico" type="icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./vilasC2.webp" />
+    <link rel="apple-touch-icon" href="../public/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,7 +34,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Foodbud</title>
+    <title>Foodbudd- Find out every special Recipe on this planet!</title>
+    <meta name="description" content="We have wide variety of all the eatable recipes on the world right now! And you can learn how to make that, by knowing it's calories."/>
+    <meta name="robots" content="indexn archive"/>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
