--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <center> <p> &copy; <script>document.write(new Date().getFullYear())</script> Vilas Hegde All Rights are not Reserved</p></center>
+    <center>
+      <div class="footer" style="display: flex;align-items: center;justify-content: center;margin: 0 auto;padding: 0;background-color:rgba(255,255,255,0.2);height: 20px;">
+        <p> &copy; <script>document.write(new Date().getFullYear())</script> Vilas Hegde All Rights are not Reserved</p>
+      </div>
+    </center>
+  
 
   </body>
 </html>
