--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
 </script>
 <meta name="google-site-verification" content="x6-z87gjUSYpyB5BfqAAwG-zRHHGDKAcCJwbdm5moHY" />
     <meta charset="utf-8" />
-    <link rel="icon" href="../public/favicon.ico" type="icon" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="../public/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -53,11 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <center>
-      <div class="footer" style="display: flex;align-items: center;justify-content: center;margin: 0 auto;padding: 0;background-color:rgba(255,255,255,0.2);height: 20px;">
-        <p> &copy; <script>document.write(new Date().getFullYear())</script> Vilas Hegde All Rights are not Reserved</p>
-      </div>
-    </center>
+   
   
 
   </body>
